--- a/MB2_pre.Rmd
+++ b/MB2_pre.Rmd
@@ -50,6 +50,7 @@ plot(ww2, col="red", add=TRUE)
 ## Data Source
 - Landsat 8 OLI/TIRS C1 Level-2 Products (USGS) => NDVI/LAI
 - ERA Interim (ECMWF) => daily temperature
+- Apri. - Aug. 2017 & 2018
 
 
 ## NDVI & LAI
